force-app/main/default/objects/TicketSummarizerEndpoint__mdt/TicketSummarizerEndpoint__mdt.object-meta.xml
<CustomObject>
    <label>Ticket Summarizer Endpoint</label>
    <pluralLabel>Ticket Summarizer Endpoints</pluralLabel>
    <description
  >Environment-specific endpoint + API key for the Ticket summarizer callout.</description>
</CustomObject>