force-app/main/default/objects/TicketSummarizerEndpoint__mdt/fields/ApiKey__c.field-meta.xml
<CustomField>
    <fullName>ApiKey__c</fullName>
    <label>API Key</label>
    <description>API Gateway key value to send as x-api-key.</description>
    <length>255</length>
    <type>Text</type>
</CustomField>