force-app/main/default/objects/TicketSummarizerEndpoint__mdt/fields/BaseUrl__c.field-meta.xml
<CustomField>
    <fullName>BaseUrl__c</fullName>
    <label>Base URL</label>
    <description>API Gateway base URL (no trailing slash).</description>
    <length>255</length>
    <type>Text</type>
</CustomField>