force-app/main/default/objects/TicketSummarizerEndpoint__mdt/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <label>Environment</label>
    <description>Environment key: sandbox or production.</description>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>